--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "gofishbackend",
   "version": "1.0.0",
   "description": "The backend for a distributed Go Fish Application",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/Dp237515/GoFIshBackend/issues"
   },
-  "homepage": "https://github.com/Dp237515/GoFIshBackend#readme"
+  "homepage": "https://github.com/Dp237515/GoFIshBackend#readme",
+  "dependencies": {
+    "axios": "^0.21.4",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.8"
+  }
 }
